--- a/app/src/main/res/layout/dialog_content_options.xml
+++ b/app/src/main/res/layout/dialog_content_options.xml
@@ -13,6 +13,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.5"
         app:cardBackgroundColor="@color/md_theme_surface"
         app:cardCornerRadius="16dp"
         app:cardElevation="16dp">
